# Routes/empRoutes.js
@@ -5,6 +5,7 @@ const empContro = require('../Controller/empController')
 routes.post('/register', empContro.upsert)
 routes.get('/getAll', empContro.getAll)
 routes.get('/getById/:empId', empContro.getById)
+routes.get('/getAbsence',empContro.getAttendance)
 routes.delete('/delete/:id', empContro.delete)
 
 
